<resources>
    <string name="app_name">Planilla Mensual de Sueldos</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="cargo">Cargo</string>
    <string name="haber_b_sico">Haber Básico</string>
    <string name="fechadeingreso">Fecha de Ingreso: </string>
    <string name="cargo_">"Cargo: "</string>
    <string name="hb_">"Haber Básico: "</string>
    <string name="lp_">"Liquido Pagable: "</string>
    <string name="empleado">Empleado</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_nuevo_usuario">Registrar Nuevo Usuario</string>
    <string name="llene_los_campos_vacios_para_registrar_un_nuevo_usuario">Llene los campos vacios para registrar un nuevo usuario</string>
    <string name="planilla_mensual">Planilla Mensual</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciar">Iniciar</string>
    <string name="registra">Registrar</string>
</resources>